@@ -7,6 +7,8 @@ apply from: "$rootDir/gradle/forbiddenapis.gradle"
 apply from: "$rootDir/gradle/spotless.gradle"
 apply from: "$rootDir/gradle/spotbugs.gradle"
 apply from: "$rootDir/gradle/repositories.gradle"
+apply from: "$rootDir/gradle/pitest.gradle"
+apply from: "$rootDir/gradle/test-suites.gradle"
 
 // Only run one testcontainers test at a time
 ext.testcontainersLimit = gradle.sharedServices.registerIfAbsent("testcontainersLimit", BuildService) {
@@ -14,11 +16,10 @@ ext.testcontainersLimit = gradle.sharedServices.registerIfAbsent("testcontainers
 }
 
 // Task for tests that want to run forked in their own separate JVM
-tasks.register('forkedTest', Test) {
-}
-
-test {
-  finalizedBy "forkedTest"
+if (tasks.matching({it.name == 'forkedTest'}).empty) {
+  tasks.register('forkedTest', Test).configure {
+    useJUnitPlatform()
+  }
 }
 
 def applyCodeCoverage = !(
@@ -33,8 +34,8 @@ if (applyCodeCoverage) {
   apply from: "$rootDir/gradle/jacoco.gradle"
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 // when building with Java 9+, lazily set compiler --release flag to match target
 def skipSettingCompilerRelease = project.findProperty('skipSettingCompilerRelease')
@@ -59,8 +60,8 @@ if (project.hasProperty('minJavaVersionForTests') && project.getProperty('minJav
   }
 
   dependencies {
-    compileOnly sourceSets."main_$name".compileClasspath
-    implementation sourceSets."main_$name".output
+    compileOnly files(project.sourceSets."main_$name".compileClasspath)
+    implementation files(project.sourceSets."main_$name".output)
   }
 
   jar {
@@ -87,23 +88,6 @@ java {
   withSourcesJar()
 }
 
-[JavaCompile, ScalaCompile].each { type ->
-  tasks.withType(type).configureEach {
-    doFirst {
-      // We do this specifically for Java7 bytecode generation because we would like to be able to compile
-      // with Java8+ compiler. This likely would require some modifications when we switch to java11 compiler.
-      // Using proper Java7 bootstrap and extensions allows to be sure our code will run on real Java7.
-      if (JavaVersion.toVersion(sourceCompatibility) == JavaVersion.VERSION_1_7
-        && JavaVersion.current() != JavaVersion.VERSION_1_7
-        && System.env.JAVA_7_HOME != null) {
-        options.fork = true
-        options.bootstrapClasspath = fileTree(include: ['*.jar'], dir: "${System.env.JAVA_7_HOME}/jre/lib/")
-        options.extensionDirs = "${System.env.JAVA_7_HOME}/jre/lib/ext/"
-      }
-    }
-  }
-}
-
 jar {
   /**
    Make Jar build fail on duplicate files
@@ -120,7 +104,7 @@ jar {
 }
 
 tasks.register("packageSources", Jar) {
-  classifier = 'sources'
+  archiveClassifier = 'sources'
   from sourceSets.main.allSource
 }
 artifacts.archives packageSources
@@ -183,10 +167,6 @@ project.afterEvaluate {
     // Only change test JVM if it's not the one we are running the gradle build with
     if (currentJavaHomePath != testJvmHomePath) {
       def jvmSpec = new SpecificInstallationToolchainSpec(project.getObjects(), file(testJvmHomePath))
-      // Not really sure why this has to be done forcefully, but if it's not then gradle will complain that
-      // javaLauncher.metadata.taskInputs.languageVersion doesn't have a configured value (even though it is
-      // populated automatically by the javaToolchainsService)
-      jvmSpec.languageVersion.set(JavaLanguageVersion.of(testJvmLanguageVersion))
       // The provider always says that a value is present so we need to wrap it for proper error messages
       Provider<JavaLauncher> launcher = providers.provider {
         try {
@@ -219,9 +199,12 @@ project.afterEvaluate {
     } else {
       def name = it.name
       onlyIf { isJavaVersionAllowed(JavaVersion.current(), name) }
+      if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+        jvmArgs += ['--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED']
+      }
     }
 
-    if (project.plugins.hasPlugin('org.unbroken-dome.test-sets') && configurations.hasProperty("latestDepTestRuntime")) {
+    if (configurations.hasProperty("latestDepTestRuntimeClasspath")) {
       doFirst {
         def testArtifacts = configurations.testRuntimeClasspath.resolvedConfiguration.resolvedArtifacts
         def latestTestArtifacts = configurations.latestDepTestRuntimeClasspath.resolvedConfiguration.resolvedArtifacts
@@ -288,7 +271,11 @@ ext.setJavaVersion = (it, javaVersionInteger) -> {
   try {
     ac.configure {
       options.fork = true
-      options.forkOptions.javaHome = compiler.get().metadata.installationPath.asFile
+      if (ac.hasProperty('javaCompiler')) {
+        javaCompiler = compiler
+      } else {
+        options.forkOptions.javaHome = compiler.get().metadata.installationPath.asFile
+      }
     }
   } catch (NoSuchElementException ignored) {
     throw new GradleException("Unable to find compiler for Java $javaVersionInteger. Have you set JAVA_${javaVersionInteger}_HOME?")
@@ -327,16 +314,22 @@ def isJavaLanguageVersionAllowed(JavaLanguageVersion languageVersion, String tes
 }
 
 def isJdkForced(String javaName) {
-  return (project.hasProperty('forceJdk') && project.getProperty('forceJdk').contains(javaName))
+  return (project.hasProperty('forceJdk') && project.getProperty('forceJdk').any { it.equalsIgnoreCase(javaName) })
 }
 
 def isJdkExcluded(String javaName) {
-  return (project.hasProperty('excludeJdk') && project.getProperty('excludeJdk').contains(javaName))
+  return (project.hasProperty('excludeJdk') && project.getProperty('excludeJdk').any { it.equalsIgnoreCase(javaName) })
 }
 
 def getJavaHomePath(String path) {
   def javaHome = new File(path).toPath().toRealPath()
   return javaHome.endsWith("jre") ? javaHome.parent : javaHome
+}
+
+tasks.register('testJar', Jar) {
+  dependsOn(testClasses)
+  from sourceSets.test.output
+  archiveClassifier = 'test'
 }
 
 apply from: "$rootDir/gradle/configure_tests.gradle"
